[package]
name = "tocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
redis = "0.21"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3.5"
crossbeam = "0.8.1"

[features]
default = []
test-redis = []

[[bench]]
name = "bench_main"
harness = false