[package]
name = "tocket"
version = "0.1.1"
authors = ["LazyMechanic <asharnrus@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A trait and simple implemetation of 'Tocken Bucket' algorithm"
repository = "https://github.com/LazyMechanic/tocket"
documentation = "https://docs.rs/tocket"
readme = "README.md"
categories = ["algorithms", "web-programming"]
keywords = ["token", "bucket", "rate", "limit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bincode = "1.3"
bytes = "1.1"
crc32fast = "1.3"
futures = "0.3"
parking_lot = "0.12"
redis = "0.21"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1.17", features = ["net", "rt", "macros", "sync"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }

[dev-dependencies]
criterion = "0.3.5"
crossbeam = "0.8.1"

[features]
default = []
redis-impl = []

[[bench]]
name = "bench_main"
harness = false